<resources>
    <string name="app_name">External files 5.1.2</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="c">C</string>
    <string name="plus_minus">+/-</string>
    <string name="percentage">%</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="rad">Rad</string>
    <string name="to_engine">Переключить на инженерный</string>
    <string name="to_ordinary">Переключить на обычный</string>
    <string name="tan">tan</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="sqrt">x^1/2</string>
    <string name="square">x^2</string>
    <string name="log">log</string>
    <string name="exp">e^x</string>
    <string name="dividex">1/x</string>
    <string name="xy">x^y</string>
    <string name="pi">Pi</string>
    <string name="my_string">MyString</string>
    <string name="my_string_engine">MyStringEngine</string>
    <string name="settings">Настройки</string>
    <string name="ok">OK</string>
    <string name="hint_path">Введите путь к файлу</string>
    <string name="don_write_text">Путь к файлу не введен</string>
    <string name="error_reading">Ошибка чтения файла</string>
    <string name="error_file_not_found">Файл не найден</string>
    <string name="error_return_intent_data">Ошибка возврата данных дочерней активности</string>
    <string name="data_null">данные не переданы</string>
</resources>
